Set height to nav to prevent home transition jump

--- a/src/scss/_transitions.scss
+++ b/src/scss/_transitions.scss
@@ -1,36 +1,31 @@
 .slide-in-left-enter {
-  transform: translateX(-120%);
+  opacity: 0;
+  transform: translateX(-100%);
 }
 
 .slide-in-right-enter {
-  transform: translateX(120%);
+  opacity: 0;
+  transform: translateX(100%);
 }
 
 .slide-in-right-leave-to {
-  transform: scaleX(10);
-  //-webkit-transform-style: preserve-3d;
-  //-webkit-backface-visibility: hidden;
-  //-webkit-transform: translate3d(0, 0, 0);
-  //transform-origin: top right;
+  transform: scaleX(20);
+  transform-origin: top right;
 }
 
 .slide-in-left-leave-to {
-  //-webkit-transform: scaleX(10);
-  transform: scaleX(5);
-  //transform-origin: top left;
-  //-webkit-transform-style: preserve-3d;
-  //-webkit-transform: translate3d(0, 0, 0);
-  //-webkit-backface-visibility: hidden;
+  transform: scaleX(20);
+  transform-origin: top left;
 }
 
 .slide-in-left-enter-active,
 .slide-in-right-enter-active {
-  transition: 0.6s ease-in;
+  transition: 1s ease-in;
 }
 
 .slide-in-left-leave-active,
 .slide-in-right-leave-active {
-  transition: 1s linear;
+  transition: 2s linear;
 }
 
 .fade-in-top-leave-active,
@@ -56,7 +51,7 @@
 
 .fade-in-top-enter-active,
 .fade-in-bottom-enter-active {
-  transition: 0.5s ease-in;
+  transition: 1s;
 }
 
 .fade-enter-active {
